[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
heap-allocator = { git = "https://github.com/binary-bruce/naive-heap-allocator" }
page-table = { git = "https://github.com/binary-bruce/naive-page-table" }

[profile.release]
debug = true
