[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
heap-allocator = { git = "https://github.com/binary-bruce/naive-heap-allocator" }
page-table = { git = "https://github.com/binary-bruce/naive-page-table" }
memory-set = { git = "https://github.com/binary-bruce/naive-memory-set/" }
up-safe-cell = { git = "https://github.com/binary-bruce/up-safe-cell" }
pid = { git = "https://github.com/binary-bruce/pid" }
sbi-utils = { git = "https://github.com/binary-bruce/sbi-utils" }

[profile.release]
debug = true
